force-app/main/default/objects/Spread_Pilot_Run__c/Spread_Pilot_Run__c.object-meta.xml
<CustomObject>
    <description>One execution of the commercial financial spreading AI evidence pilot.</description>
    <label>Spread Pilot Run</label>
    <nameField>
        <displayFormat>SPR-{0000}</displayFormat>
        <label>Spread Pilot Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spread Pilot Runs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>