force-app/main/default/objects/Spread_Pilot_Run__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <length>80</length>
    <type>Text</type>
</CustomField>