force-app/main/default/objects/Spread_Pilot_Run__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <label>Portfolio</label>
    <length>40</length>
    <type>Text</type>
</CustomField>