force-app/main/default/objects/Spread_Pilot_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>